# Shoply-AI-LLM

./: .gitignore  CMakeLists.txt  COMPLETE.md  DEVELOPMENT.md  FINAL_SUMMARY.md  NATIVE_README.md  PROJECT.md  QUICKSTART.md  README.md  STRUCTURE.md  project-config.json  test.sln
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
app/server/: main.py  requirements.txt  run.sh
app/src/: App.css  App.jsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs
julia/: llm_demo.jl
llm-app/: .gitignore  README.md  index.html  package.json  start.sh  tauri.conf.json  vite.config.ts
llm-app/backend/: main.py  requirements.txt  run.sh
llm-app/src/: App.css  App.jsx
models/: README.md
models/julia-cli/: Project.toml  llm_demo.jl
models/python-cli/: llm_demo.py
native/: README.md
native/macos/: LLMChat.swift  Package.swift  build.sh  project.json
native/macos/Sources/LLMChat/: Main.swift  run_app.swift
native/windows/: LLMChat.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  build.bat
native/windows/asm/: matrix_ops.asm
native/windows/c/: build.bat  llm_chat.c
native/windows/cpp/: CMakeLists.txt  gui.cpp  gui.hpp  inference_engine.cpp  inference_engine.hpp  main.cpp
python/: llm_demo.py
