[package]
name = "llm-chat"
version = "0.1.0"
description = "LLM Chat Application"
authors = ["william-rauwens-oliver"]
edition = "2021"
rust-version = "1.60"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "process-all", "fs-all", "path-all"] }
tokio = { version = "1", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
